--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,12 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  /*place-items: center;*/
+  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
+
+
 
 h1 {
   font-size: 3.2em;
