--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
 	text-align: center;
-	padding: 2% 5%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+	width: 100vw;
 }
 
 .App * {
@@ -94,3 +99,18 @@ input[type="number"] {
 	width: 250px;
 	z-index: 1000;
    }
+
+   .charts-container {
+	display: grid;
+	width: 100%;
+	max-width: 1000px;
+	margin: 20px auto;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	gap: 20px;
+  }
+
+  @media (max-width: 768px) {
+	.App {
+	  padding: 2% 3%;
+	}
+}
