--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	min-height: 100vh;
+	min-height: 80vh;
 	width: 100vw;
 }
 
@@ -62,6 +62,7 @@ input[type="number"] {
 	padding: 8px 6px 8px 10px;
 	background-color: #eee;
 	cursor: default;
+	color: black;
 }
 
 .suggestions > li:last-child {
@@ -75,11 +76,15 @@ input[type="number"] {
 
 .event {
 	padding: 10px 10px 35px;
-	margin-bottom: 10px;
+	margin: 10px;
 	text-align: left;
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	position: relative;
+}
+
+#event-list {
+	width: 80%;
 }
 
 .details-btn {
